Show nickname only if username is empty in leaderboard Add text-align: center to input-scores in FixtureComponent

--- a/Client/Pages/FixturesComponent.razor.css
+++ b/Client/Pages/FixturesComponent.razor.css
@@ -126,4 +126,5 @@ button:disabled {
 
 .input-scores input[type="number"] {
     margin-block-end: 10px;
+    text-align: center;
 }
